--- a/.env
+++ b/.env
@@ -2,4 +2,11 @@ MONGO_URI=mongodb://localhost:27017/FRESH
 
 PORT=3001
 
+# Email Configuration
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=saranyamariajohnson@gmail.com
+EMAIL_PASS=yazbtvfbllkciymg
+EMAIL_FROM=FreshNest <saranyamariajohnson@gmail.com>
+
 
