--- a/.env
+++ b/.env
@@ -2,6 +2,12 @@ MONGO_URI=mongodb://localhost:27017/FRESH
 
 PORT=3001
 
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-2024-freshnest
+JWT_REFRESH_SECRET=your-super-secret-refresh-jwt-key-change-this-in-production-2024-freshnest
+JWT_EXPIRE=15m
+JWT_REFRESH_EXPIRE=7d
+
 # Email Configuration
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
