continue with google

--- a/.env
+++ b/.env
@@ -15,4 +15,6 @@ EMAIL_USER=saranyamariajohnson@gmail.com
 EMAIL_PASS=yazbtvfbllkciymg
 EMAIL_FROM=FreshNest <saranyamariajohnson@gmail.com>
 
+# Clerk Configuration
+CLERK_SECRET_KEY=ysk_test_bZ00Lekxbe6HYhRopvFAhSxUt9cp64P1aVWyEOiBGq
 
