--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://localhost:27017/FRESH
+MONGO_URI=mongodb+srv://saranya:saranya@freshnest.okjmkgy.mongodb.net/FRESH?retryWrites=true&w=majority&appName=FreshNest
 
 PORT=3001
 
