--- a/.env.backup
+++ b/.env.backup
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://saranya:saranya@ac-mwsuaad-shard-00-00.okjmkgy.mongodb.net:27017,ac-mwsuaad-shard-00-01.okjmkgy.mongodb.net:27017,ac-mwsuaad-shard-00-02.okjmkgy.mongodb.net:27017/FRESH?replicaSet=atlas-cjj7ki-shard-0&authSource=admin&ssl=true
+MONGO_URI=mongodb+srv://saranya:saranya@freshnest.okjmkgy.mongodb.net/FRESH?retryWrites=true&w=majority&appName=FreshNest
 
 PORT=3001
 
